	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2006-07-02

	* Add min-token-len check (with exemption for 2 character
          money amounts which bogofilter has long accepted).

	2006-07-01

	* Refactor get_token.  Function get_single_token is the original
          get_token function.  Function get_multi_token calls
          get_single_token when another token must be parsed, else it
          constructs multi-part tokens using w_token_array (an array
          of word_t structs).

	2006-06-20

	* Add options for min/max token length, multi-token count, and
          max multi-token length.

	* Modify get_token() to return multi-word tokens.

	2006-06-02

	* "make rpm" changes:
	  - document use with gpg-agent (see Makefile.am)
	  - build static RPMs (these won't fail) before shared RPMs

	2006-05-29

	* #include cleanups in common.h, system.h and C files.

	2006-04-28

	* Updated copyright dates.

	2006-04-13

	* Included additional config file options in bogofilter's
	  --help message.

	2006-03-27

	* Corrected option parsing in bogotune to support -n ham1 ham2
	  -s spam1 spam2 as suggested by bogotune -h; broken since 0.93.2.

	2006-03-26

	* Corrected problem with bogotune's -D option (thanks to Jason Smith).

	* Corrected man page description of bogotune's -n and -s options.

	2006-03-17

	* Fixed bf_compact's test for transactional environment.

	2006-03-12

	* 1.0.2 Promoted to "Stable" status

1.0.2	2006-03-03

	2006-02-19

	* Added vm-bogofilter.el for using bogofilter with VM, an
          Emacs mail tool (thanks to Björn Knutsson).
	* Added FAQ question "How do I use bogofilter with VM (an
          Emacs mail tool)?" (thanks to Pimpon).

	2006-02-14

	* SleepyCat has been acquired by Oracle, who are now providing